--- a/inventory/host_vars/awx4.example.org/vars.yml
+++ b/inventory/host_vars/awx4.example.org/vars.yml
@@ -2,14 +2,14 @@
 org_name: "Example Inc"
 
 # URL Settings
-awx_subdomain: awx2
+awx_subdomain: awx4
 rancher_url: rancher.example.org
 certbot_email: example@protonmail.com
 
 # RKE2 Settings
 rke2_load_balancer: leader.example.org
 rke2_bootstrap_node: awx1.example.org
-rke2_controlplane: true
+rke2_controlplane: false
 rke2_worker: true
 
 # AWX Settings
